Added row selection function and New/Delete button

--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
 					<label for="data-freq">Frequency (min)</label><br>
 					<input type="number" class="form-control" id="data-freq" required><br>
 
-					<button class="btn btn-warning btn-md" id="select-schedule">Submit</button>
+					<button class="btn btn-warning btn-md" id="select-addData">Submit</button>
+					<button class="btn btn-warning btn-md" id="select-newData">New</button>
+					<button class="btn btn-danger btn-md" id="select-delData">Delete</button>	
+				</form>
 			</div>
 		</section>
 	</div>
